--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsTutorialApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <title>Ruby on Rails Tutorial Rails Tutorial App | <%= yield(:title) %></title>
+  <%= stylesheet_link_tag "application", media: 'all', "data-tubolink-track" => true %>
+  <%= javascript_include_tag "application", "data-tubolink-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= yield %>
 </body>
 </html>
+
+
