--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
       </div><!--/row-->
 
       <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
 
     </div> <!-- /container -->
 
