--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,10 +7,27 @@
     </button>
     <a class="navbar-brand" href="#">RailsTutorialApp</a>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path  %></li>
         <li><%= link_to "Help", help_path  %></li>
-        <li><%= link_to "Sign in", '#'  %></li>
+        
+        <% if signed_in? %>
+          <li><%= link_to "Users", '#' %></li>
+          <li id="fat-menu" class="dropdown">
+
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+            <ul class="dropdown-menu left">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Sign out", signout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Sign in", signin_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
